# AL_ILQR_Beginner

./: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
al-ilqr-starter/: .gdbinit  CMakeLists.txt  README.md  imgui.ini  quick_start.md
al-ilqr-starter/apps/: rerun_imgui_frontend.cpp
al-ilqr-starter/config/: vehicle_bicycle_config.ini
al-ilqr-starter/examples/: phase0_linear_rollout.cpp  phase10_numerical_enhancement_demo.cpp  phase11_dynamic_obstacle_demo.cpp  phase12_dynamic_obstacle_speed_sweep_demo.cpp  phase1_bicycle_rollout.cpp  phase1_unicycle_rollout.cpp  phase2_linear_lqr_demo.cpp  phase3_unicycle_ilqr_demo.cpp  phase4_unicycle_ilqr_stable_demo.cpp  phase5_constraint_evaluation_demo.cpp  phase6_augmented_lagrangian_demo.cpp  phase7_al_ilqr_demo.cpp  phase8_autodrive_demo.cpp  phase9_autodrive_visualization_demo.cpp
al-ilqr-starter/include/al/: al_ilqr_solver.hpp  augmented_lagrangian_cost.hpp
al-ilqr-starter/include/autodrive/: circular_obstacle_constraint.hpp  demo_scenario.hpp  lane_tracking_cost.hpp  speed_limit_constraint.hpp  straight_reference_line.hpp  trajectory_response_analysis.hpp  vehicle_bicycle_config.hpp
al-ilqr-starter/include/constraints/: constraint_function.hpp  control_box_constraint.hpp  terminal_goal_constraint.hpp
al-ilqr-starter/include/core/: trajectory.hpp  types.hpp
al-ilqr-starter/include/cost/: cost_function.hpp  quadratic_cost.hpp
al-ilqr-starter/include/debug/: debug_console_snapshot.hpp
al-ilqr-starter/include/dynamics/: dynamics_model.hpp  kinematic_bicycle_model.hpp  linear_point_mass_model.hpp  unicycle_model.hpp
al-ilqr-starter/include/ilqr/: ilqr_solver.hpp
al-ilqr-starter/include/lqr/: finite_horizon_lqr_solver.hpp
al-ilqr-starter/include/problems/: constrained_optimal_control_problem.hpp  optimal_control_problem.hpp
al-ilqr-starter/include/visualization/: al_ilqr_log_writer.hpp  obstacle_prediction_writer.hpp  trajectory_writer.hpp
al-ilqr-starter/scripts/: install_deps.sh  plot_phase11_iteration_gif.py
al-ilqr-starter/scripts/debug/: my_al_ilqr_gdb_printers.py
al-ilqr-starter/src/al/: al_ilqr_solver.cpp  augmented_lagrangian_cost.cpp
al-ilqr-starter/src/autodrive/: circular_obstacle_constraint.cpp  demo_scenario.cpp  lane_tracking_cost.cpp  speed_limit_constraint.cpp  straight_reference_line.cpp  vehicle_bicycle_config.cpp
al-ilqr-starter/src/constraints/: constraint_function.cpp  control_box_constraint.cpp  terminal_goal_constraint.cpp
al-ilqr-starter/src/core/: trajectory.cpp
al-ilqr-starter/src/cost/: quadratic_cost.cpp
al-ilqr-starter/src/dynamics/: kinematic_bicycle_model.cpp  linear_point_mass_model.cpp  unicycle_model.cpp
al-ilqr-starter/src/ilqr/: ilqr_solver.cpp
al-ilqr-starter/src/lqr/: finite_horizon_lqr_solver.cpp
al-ilqr-starter/src/problems/: constrained_optimal_control_problem.cpp  optimal_control_problem.cpp
al-ilqr-starter/src/visualization/: al_ilqr_log_writer.cpp  obstacle_prediction_writer.cpp  trajectory_writer.cpp
al-ilqr-starter/tests/: phase0_smoke_test.cpp  phase10_numerical_enhancement_test.cpp  phase11_dynamic_obstacle_test.cpp  phase12_dynamic_obstacle_speed_sweep_test.cpp  phase1_bicycle_test.cpp  phase1_unicycle_test.cpp  phase2_lqr_test.cpp  phase3_ilqr_test.cpp  phase4_ilqr_stability_test.cpp  phase5_constraints_test.cpp  phase6_al_cost_test.cpp  phase7_al_ilqr_test.cpp  phase8_autodrive_test.cpp  phase9_visualization_export_test.cpp
al-ilqr-starter/visualization/: plot_phase11_dynamic_obstacle.py  plot_phase11_full.py  plot_phase11_optimization_animation.py  plot_phase12_speed_sweep.py  plot_phase2_lqr.py  plot_phase3_ilqr.py  plot_phase8_autodrive.py  plot_phase9_autodrive.py
